--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-root {
+:root {
     --white-color: hsl(0, 0%, 100%);
     --lightGray-color: hsl(212, 45%, 89%);
     --grayishBlue-color: hsl(220,15%,55%);
@@ -11,9 +11,50 @@ root {
     --weight-400: 400;
     --weight-700: 700;
 }
-
-* {
+body {
     margin: 0;
     padding: 0;
     font-family: var(--primary-font);
+    background-color: var(--lightGray-color);
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#main {
+    width: 33%;
+    height: 55%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--white-color);
+    border-radius: 25px;
+    
+}
+#image{
+    height:57%;
+    width:90%;
+    border-radius:10px;
+    margin-top: -8px
+}
+p:first-of-type {
+    font-weight: var(--weight-700);
+    padding-top: 10px;
+    font-size: 21px;
+}
+p{
+    
+    color: var(--darkBlue-color);
+    padding: 0 10%;
+    text-align: center;
+}
+
+p:last-of-type{
+    color: var(--grayishBlue-color);
+    font-size: var(--primary-fontsize);
+    margin-top: -5px;
 }
